@@ -1,0 +1,17 @@
+[network]
+mode=vlan
+dhcpdetector=enabled
+
+[trapping]
+testing=disabled
+registration=enabled
+detection=disabled
+passthrough=proxy
+
+[registration]
+skip_mode=disabled
+auth=local
+
+[scan]
+registration=disabled
+
