@@ -140,6 +140,8 @@
           (http://www.packetfence.org/mantis/view.php?id=465)
         disable skip_mode in reg-detect-vlan config template
           (http://www.packetfence.org/mantis/view.php?id=483)
+        added reg-vlan configurator template
+          (http://www.packetfence.org/mantis/view.php?id=482)
 
 1.7.4
         undef operator in SNMP.pm
